Fixed header on small screens.

--- a/_sass/entry.scss
+++ b/_sass/entry.scss
@@ -20,7 +20,7 @@ $font-size: 16px;
 // Layout
 $header-height: 60px;
 $content-width: 780px;
-$nav-width: 260px;
+$nav-width: 268px;
 $toc-width: 220px;
 
 
