--- a/_sass/style/_header.scss
+++ b/_sass/style/_header.scss
@@ -10,14 +10,18 @@ header {
 
 	.container {
 		display: flex;
+		flex-flow: row wrap;
 		align-items: center;
 		margin: auto;
+		max-width: $content-width + $nav-width + $toc-width;
 	}
 
 	// Link list
-	ul {
+	.site-links {
 		list-style: none;
 		padding: 0 16px;
+		white-space: nowrap;
+		overflow-y: auto;
 
 		li {
 			display: inline-block;
@@ -29,6 +33,27 @@ header {
 			font-size: 1.2rem;
 			font-weight: 400;
 			padding: 0 4px;
+		}
+	}
+}
+
+@include mobile-only {
+	body {
+		margin-top: 106px;
+	}
+	header {
+		height: 106px;
+
+		.container::before {
+			content: '';
+			width: 100%;
+			order: 1;
+			justify-content: center;
+			font-size: 0.7rem;
+		}
+
+		.site-links {
+			order: 2;
 		}
 	}
 }
