--- a/_sass/style/_nav.scss
+++ b/_sass/style/_nav.scss
@@ -8,6 +8,7 @@ nav {
 	.inner-nav {
 		width: $nav-width;
 		margin-left: auto;
+		padding-left: 9px;
 	}
 
 	.nav-title {
